# Download_Crypto_Currencies_Data

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Import_Crypto_Currencies_Data.py  LICENSE.txt  MANIFEST.in  README.md  README.rst  TODO.md  doc-requirements.txt  exemple.ipynb  exemple.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.githooks/: pre-push
.github/workflows/: badges.yml  ci.yml  release.yml
dccd/: __init__.py  binance.py  bitfinex.py  bitmex.py  dl_cc_data.py  exchange.py  gdax.py  io_tools.py  kraken.py  models.py  poloniex.py  process_data.py  time_tools.py  timetools.py  websocket_tools.py  websockets.py
dccd/continuous_dl/: __init__.py  binance.py  bitfinex.py  bitmex.py  bybit.py  exchange.py  kraken.py  okx.py
dccd/daemon/: __init__.py  cli.py  config.py  health.py  scheduler.py  storage.py  stream_manager.py
dccd/histo_dl/: __init__.py  binance.py  bybit.py  coinbase.py  exchange.py  gdax.py  kraken.py  okx.py  poloniex.py
dccd/tests/: conftest.py  test_binance.py  test_binance_ws.py  test_bitfinex.py  test_bitmex.py  test_bybit.py  test_bybit_ws.py  test_coinbase.py  test_daemon_cli.py  test_daemon_config.py  test_daemon_health.py  test_daemon_scheduler.py  test_daemon_storage.py  test_daemon_stream_manager.py  test_date_time.py  test_gdax.py  test_histo_dl.py  test_io.py  test_kraken.py  test_kraken_ws.py  test_models.py  test_okx.py  test_okx_ws.py  test_poloniex.py  test_process_data.py  test_websocket.py
dccd/tools/: __init__.py  date_time.py  io.py  websocket.py
doc/source/: binance.rst  bitfinex.rst  conf.py  continuous_dl.binance.rst  continuous_dl.bitfinex.rst  continuous_dl.bitmex.rst  continuous_dl.bybit.rst  continuous_dl.kraken.rst  continuous_dl.okx.rst  continuous_dl.rst  daemon.rst  exchange.rst  gdax.rst  histo_dl.binance.rst  histo_dl.bybit.rst  histo_dl.coinbase.rst  histo_dl.gdax.rst  histo_dl.kraken.rst  histo_dl.okx.rst  histo_dl.poloniex.rst  histo_dl.rst  index.rst  io_tools.rst  kraken.rst  poloniex.rst  process_data.rst  time_tools.rst  tools.date_time.rst  tools.io.rst  tools.rst  tools.websocket.rst  websockets.rst
doc/source/_static/: custom.css
doc/source/_templates/: indexsidebar.html  layout.html
doc/source/_templates/autosummary/: attribute.rst  class.rst  function.rst  member.rst  method.rst  property.rst
examples/: config.example.yml  daemon_example.py  historical_downloader.py
