[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dccd"
version = "2.1.0"
description = "Download Crypto Currency Data from different exchanges."
readme = "README.rst"
license = { text = "MIT" }
authors = [{ name = "Arthur Bernard", email = "arthur.bernard.92@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "requests>=2.28",
    "openpyxl>=3.1",
    "websockets>=12.0",
    "scipy>=1.10",
    "SQLAlchemy>=2.0",
    "tenacity>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
io = ["pyarrow>=13", "polars>=0.20"]
daemon = ["pyyaml>=6.0", "apscheduler>=3.10,<4"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "pytest-cov>=4.1", "ruff>=0.4", "interrogate>=1.5", "mypy>=1.0", "pandas-stubs>=2.0", "pyyaml>=6.0", "apscheduler>=3.10,<4"]
doc = ["sphinx>=7.0", "furo", "numpydoc", "sphinx-design", "sphinx-copybutton"]

[project.urls]
Homepage = "https://github.com/ArthurBernard/Download_Crypto_Currencies_Data"
Documentation = "https://download-crypto-currencies-data.readthedocs.io/"
Changelog = "https://github.com/ArthurBernard/Download_Crypto_Currencies_Data/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["dccd*"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --exitfirst -vv --capture=no --ignore=doc --ignore=examples --ignore=env --cov=dccd --cov-report=term-missing"
testpaths = ["dccd"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"dccd/**/__init__.py" = ["F401", "F403", "F405"]
"dccd/__init__.py" = ["F401", "F403", "F405"]

[tool.coverage.run]
omit = []

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disable_error_code = ["import-untyped"]
exclude = ["dccd/tests/"]

[[tool.mypy.overrides]]
module = [
    "dccd.tools.websocket",
    "dccd",
    "dccd.continuous_dl.binance",
    "dccd.continuous_dl.kraken",
    "dccd.continuous_dl.okx",
]
ignore_errors = true

[tool.interrogate]
ignore-init-method = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
fail-under = 80
exclude = ["dccd/tests"]
